--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SimpleActivity">
+        <!--<activity android:name=".SimpleActivity">
 
-        </activity>
+        </activity>-->
 
-        <activity
+       <!-- <activity
             android:name=".LessonLayouts.LinearLayoutActivity"
             android:label="@string/title_activity_linear_layout"
             android:theme="@style/AppTheme.NoActionBar">
@@ -23,6 +23,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>-->
+
+        <activity android:name=".LessonLayouts.RelativeLayoutActivity">
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN"></action>
+
+                <category android:name="android.intent.category.LAUNCHER"></category>
+
+            </intent-filter>
+
         </activity>
 
 
