--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<activity android:name=".SimpleActivity">
 
-        </activity>-->
+        <!--
+        <activity android:name=".SimpleActivity">
 
-       <!-- <activity
+        </activity>
+        -->
+
+
+        <!--
+        <activity
             android:name=".LessonLayouts.LinearLayoutActivity"
             android:label="@string/title_activity_linear_layout"
             android:theme="@style/AppTheme.NoActionBar">
@@ -23,19 +28,32 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
+        -->
 
+
+        <!--
         <activity android:name=".LessonLayouts.RelativeLayoutActivity">
-            <intent-filter>
-
-                <action android:name="android.intent.action.MAIN"></action>
-
-                <category android:name="android.intent.category.LAUNCHER"></category>
-
-            </intent-filter>
 
         </activity>
+        -->
+        <!--<activity
+            android:name=".LessonLayouts.TableLayoutActivity"
+            android:label="@string/title_activity_table_layout"
+            android:theme="@style/AppTheme.NoActionBar">
 
+        </activity>-->
+
+        <activity
+            android:name=".LessonLayouts.ScrollViewActivity"
+            android:label="@string/title_activity_scroll_view"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
