--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,24 +37,33 @@
 
         </activity>
         -->
-        <!--<activity
+        <!--
+        <activity
             android:name=".LessonLayouts.TableLayoutActivity"
             android:label="@string/title_activity_table_layout"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        -->
+
+       <!-- <activity
+            android:name=".LessonLayouts.ScrollViewActivity"
+            android:label="@string/title_activity_scroll_view"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>-->
 
         <activity
-            android:name=".LessonLayouts.ScrollViewActivity"
-            android:label="@string/title_activity_scroll_view"
+            android:name=".LessonLayouts.ConstraintLayoutActivity"
+            android:label="@string/title_activity_constraint_layout"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
+        </activity>
     </application>
 
 </manifest>
