--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,16 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    'src/main/res/layout/lesson_activity',
+                    'src/main/res/layout/lesson_layout',
+                    'src/main/res/layout',
+                    'src/main/res']
+        }
+    }
 }
 
 dependencies {
